# RestaurantManager

./: Makefile  README.md  docker-compose.yml  functionalities_summary.md  generate_telegram_webhook_secret.sh  roadmap.md  schema.md  v2.0.md
backend/: .env  .env.example  .gitignore  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  run_dev.py  setup_db.py  test_supabase_connection.py
backend/app/: __init__.py  main.py  supabase_client.py
backend/app/core/: __init__.py  config.py  database.py  logger.py
backend/app/i18n/: telegram_i18n.py
backend/app/i18n/messages/: en.json  pt.json
backend/app/models/: __init__.py  table.py
backend/app/routers/: __init__.py  auth.py  reservations.py  restaurants.py  tables.py  telegram.py  telegram_settings.py
backend/app/schemas/: __init__.py  admin.py  reservation.py  restaurant.py  table.py
backend/app/services/: __init__.py  background_tasks.py  reservation_service.py  restaurant_service.py  table_service.py  telegram_service.py  telegram_token_service.py
frontend/: .env.example  Dockerfile  auth.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .rscinfo  .tsbuildinfo
frontend/.next/cache/eslint/: .cache_1pa90ik
frontend/.next/server/: app-paths-manifest.json  middleware-manifest.json  middleware.js  middleware.js.map  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: _not-found.rsc  en.html  en.rsc  index.html  index.rsc  page.js  page_client-reference-manifest.js  pt.html  pt.rsc
frontend/.next/server/chunks/: 122.js  130.js  368.js  400.js  695.js  985.js  [root-of-the-server]__6ec1ff91._.js.map  node_modules_next_a21da7b7._.js.map
frontend/.next/server/middleware/: middleware-manifest.json
frontend/.next/server/pages/: 404.html  500.html
frontend/.next/static/TVrKyVMl_W886Kb19aRWR/: _ssgManifest.js
frontend/.next/static/chunks/: 160-fe6b7e7449240bfd.js  45-9a9a7dd625abf1dc.js  474-0c2ba32570edba60.js  [root-of-the-server]__8df7605f._.js  [root-of-the-server]__8df7605f._.js.map  [root-of-the-server]__9d126714._.css  [root-of-the-server]__9d126714._.css.map  [root-of-the-server]__e2c08166._.js  [root-of-the-server]__e2c08166._.js.map  _63d74b14._.js  _63d74b14._.js.map  _b0cdc2de._.js  _b0cdc2de._.js.map  _c4ca3980._.js  _c4ca3980._.js.map  app_[locale]_admin_dashboard_page_tsx_039e7a80._.js  app_[locale]_admin_tables_page_tsx_039e7a80._.js  app_[locale]_layout_tsx_b2f3bef0._.js  app_globals_css_f9ee138c._.single.css  app_globals_css_f9ee138c._.single.css.map  main-app-51d233181e9d1beb.js  main-b1d84748dd57acd5.js  node_modules_46599239._.js  node_modules_46599239._.js.map  node_modules_9770b326._.js  node_modules_9770b326._.js.map  node_modules_@swc_helpers_cjs_00636ac3._.js.map  node_modules_a51498a5._.js.map  node_modules_cea8d92b._.js.map  node_modules_dea781a6._.js  node_modules_dea781a6._.js.map  node_modules_next_dist_1a6ee436._.js.map  node_modules_next_dist_2ecbf5fa._.js.map  node_modules_next_dist_client_8f19e6fb._.js  node_modules_next_dist_client_8f19e6fb._.js.map  (+2 more)
frontend/app/: layout.tsx  robots.ts
frontend/app/[locale]/: layout.tsx  page.tsx
frontend/components/: EditForm.tsx  Header.tsx  SessionProvider.tsx  TelegramAlert.tsx  TelegramQRManager.tsx  ValidationRequirements.tsx  language-selector.tsx  terms-checkbox.tsx
frontend/components/ui/: alert.tsx  calendar.tsx  checkbox.tsx
frontend/components/widget/: fab.tsx  reservation-form.tsx  widget.tsx
frontend/hooks/: use-toast.ts
frontend/i18n/: middleware.ts
frontend/lib/: api.ts  schemas.ts  store.ts  supabase.ts  types.ts
frontend/messages/: en.json  pt.json
frontend/public/: robots.txt  sitemap.xml  widget.js
frontend/types/: auth.ts  next-auth.ts
frontend/widget/: index.tsx
memorybank/PR/: dashboard-ui-feature.md  reservation-ui-feature.md  table-management-ui-feature.md
memorybank/frontend/: DASHBOARD_UI_IMPLEMENTATION_DOCS.md  MAPS_IMPLEMENTATION.md  RESERVATION_UI_IMPLEMENTATION_DOCS.md  TABLE_MANAGEMENT_UI_IMPLEMENTATION_DOCS.md
(+177 files in other folders)
